--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://blog.arvinh.info/react-pwa-boilerplate",
+  "homepage": "https://avonee.github.io/react_pwa_first/",
   "eslintConfig": {
     "extends": "react-app"
   },
